// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineItem component it renders properly 1`] = `
<div
  className="flex items-center bg-white my-5 p-5"
>
  <div
    className="w-1/12 h-20"
  >
    <img
      alt="No Product Image Placeholder"
      className="w-full h-full"
      src="/images/product_image_placeholder.png"
    />
  </div>
  <div
    className="w-6/12 px-3"
  >
    <a
      href="/product/test-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <p
        className="font-secondary font-normal text-black text-base font-semibold"
      >
        Test Item
        
      </p>
    </a>
    <p
      className="font-secondary font-normal text-red-100 text-tiny mt-2"
    >
      Size - R20/SX120
    </p>
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-normal text-gray-100 text-tiny"
    >
      Quantity
    </p>
    <input
      min={1}
      onChange={[Function]}
      type="number"
      value={25}
    />
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-medium text-red-100 text-base"
    >
      $49.99
    </p>
  </div>
  <div
    className="w-1/12"
  >
    <button
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2L12 0L7 5L2 0L0 2L5 7L0 12L2 14L7 9L12 14L14 12L9 7L14 2Z"
          fill="#DBDBDB"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LineItem component it renders properly when hideDelete prop = false 1`] = `
<div
  className="flex items-center bg-white my-5 p-5"
>
  <div
    className="w-1/12 h-20"
  >
    <img
      alt="No Product Image Placeholder"
      className="w-full h-full"
      src="/images/product_image_placeholder.png"
    />
  </div>
  <div
    className="w-6/12 px-3"
  >
    <a
      href="/product/test-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <p
        className="font-secondary font-normal text-black text-base font-semibold"
      >
        Test Item
        
      </p>
    </a>
    <p
      className="font-secondary font-normal text-red-100 text-tiny mt-2"
    >
      Size - R20/SX120
    </p>
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-normal text-gray-100 text-tiny"
    >
      Quantity
    </p>
    <input
      min={1}
      onChange={[Function]}
      type="number"
      value={25}
    />
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-medium text-red-100 text-base"
    >
      $49.99
    </p>
  </div>
  <div
    className="w-1/12"
  >
    <button
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2L12 0L7 5L2 0L0 2L5 7L0 12L2 14L7 9L12 14L14 12L9 7L14 2Z"
          fill="#DBDBDB"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LineItem component it renders properly when hideDelete prop = true 1`] = `
<div
  className="flex items-center bg-white my-5 p-5"
>
  <div
    className="w-1/12 h-20"
  >
    <img
      alt="No Product Image Placeholder"
      className="w-full h-full"
      src="/images/product_image_placeholder.png"
    />
  </div>
  <div
    className="w-6/12 px-3"
  >
    <a
      href="/product/test-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <p
        className="font-secondary font-normal text-black text-base font-semibold"
      >
        Test Item
        
      </p>
    </a>
    <p
      className="font-secondary font-normal text-red-100 text-tiny mt-2"
    >
      Size - R20/SX120
    </p>
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-normal text-gray-100 text-tiny"
    >
      Quantity
    </p>
    <input
      min={1}
      onChange={[Function]}
      type="number"
      value={25}
    />
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-medium text-red-100 text-base"
    >
      $49.99
    </p>
  </div>
</div>
`;

exports[`LineItem component it renders properly when hideQuantity prop = false 1`] = `
<div
  className="flex items-center bg-white my-5 p-5"
>
  <div
    className="w-1/12 h-20"
  >
    <img
      alt="No Product Image Placeholder"
      className="w-full h-full"
      src="/images/product_image_placeholder.png"
    />
  </div>
  <div
    className="w-6/12 px-3"
  >
    <a
      href="/product/test-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <p
        className="font-secondary font-normal text-black text-base font-semibold"
      >
        Test Item
        
      </p>
    </a>
    <p
      className="font-secondary font-normal text-red-100 text-tiny mt-2"
    >
      Size - R20/SX120
    </p>
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-normal text-gray-100 text-tiny"
    >
      Quantity
    </p>
    <input
      min={1}
      onChange={[Function]}
      type="number"
      value={25}
    />
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-medium text-red-100 text-base"
    >
      $49.99
    </p>
  </div>
  <div
    className="w-1/12"
  >
    <button
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2L12 0L7 5L2 0L0 2L5 7L0 12L2 14L7 9L12 14L14 12L9 7L14 2Z"
          fill="#DBDBDB"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`LineItem component it renders properly when hideQuantity prop = true 1`] = `
<div
  className="flex items-center bg-white my-5 p-5"
>
  <div
    className="w-1/12 h-20"
  >
    <img
      alt="No Product Image Placeholder"
      className="w-full h-full"
      src="/images/product_image_placeholder.png"
    />
  </div>
  <div
    className="w-6/12 px-3"
  >
    <a
      href="/product/test-item"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <p
        className="font-secondary font-normal text-black text-base font-semibold"
      >
        Test Item
        
      </p>
    </a>
    <p
      className="font-secondary font-normal text-red-100 text-tiny mt-2"
    >
      Size - R20/SX120
    </p>
  </div>
  <div
    className="w-2/12"
  >
    <p
      className="font-secondary font-medium text-red-100 text-base"
    >
      $49.99
    </p>
  </div>
  <div
    className="w-1/12"
  >
    <button
      onClick={[Function]}
    >
      <svg
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14 2L12 0L7 5L2 0L0 2L5 7L0 12L2 14L7 9L12 14L14 12L9 7L14 2Z"
          fill="#DBDBDB"
        />
      </svg>
    </button>
  </div>
</div>
`;
